@@ -1,3 +1,5 @@
+* xmt -> aorg timestamp cleanup from Dave Mills, reported by Dave Hart.
+* Leap/expire cleanup from Dave Mills.
 (4.2.5p178) 2009/05/21 Released by Harlan Stenn <stenn@ntp.org>
 * Provide erealloc() and estrdup(), a la emalloc().
 * Improve ntp.conf's parser error messages.
